[project]
name = "bluesky-repost-bot"
version = "1.5.1"  # semantic version
description = "Source-first Discord -> Bluesky moodboard repost bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "atproto>=0.0.55",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
    "pillow>=10.0",
    "google-api-python-client>=2.160",
    "google-auth>=2.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "google-auth-oauthlib>=1.2",
]

[project.scripts]
repost-bot = "bot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
