[project]
name = "bluesky-repost-bot"
version = "1.11.1"  # semantic version
description = "Source-first Discord -> Bluesky moodboard repost bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "atproto>=0.0.55",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "uvicorn[standard]>=0.30",
    "pillow>=10.0",
    "google-api-python-client>=2.160",
    "google-auth>=2.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=6.0",
    "google-auth-oauthlib>=1.2",
]

[project.scripts]
repost-bot = "bot.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

# Coverage: run with `uv run pytest --cov --cov-report=term-missing`.
# --cov is intentionally NOT in addopts so plain `pytest -k ...` stays fast.
[tool.coverage.run]
source = ["bot"]
branch = true
concurrency = ["greenlet"]  # trace inside SQLAlchemy-async greenlet switches
omit = [
    "*/bot/admin/reauth_youtube.py",  # interactive browser OAuth flow
    "*/bot/dashboard/__main__.py",    # module-level uvicorn.run()
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 99.5  # only documented pragmas/omissions are uncovered; pull back if docs/stubs grow
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",  # Protocol stub bodies
]
